# node-int64

./: Cargo.toml  README.md  eslint.config.mjs  index.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
lib/: lib.d.ts  lib.js
src/: functions.rs  lib.js  lib.rs  lib.ts  napi_static.rs
tests/: tests.test.js  tests.test.ts
