[package]
name = "int64-napi"
version = "3.0.0"
edition = "2021"
rust-version = "1.58"
repository = "https://github.com/magiclen/node-int64"
homepage = "https://magiclen.org/node-js-int64/"
keywords = ["node.js", "int64", "long"]
categories = []
description = "Use Rust to compute 64-bit signed integers."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
napi = "2"
napi-derive = "2"

random-number = "0.1.6"

[build-dependencies]
napi-build = "2"